# localcomm

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
proto/: localcomm.proto
src/: cli.rs  server.rs
src/service/: mod.rs
