[package]
name = "localcomm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-prost-build = "*"