[package]
name = "localcomm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
mdns-sd = "0.19.1"
local-ip-address = "0.6.12"
whoami = "2.1.2"
slugify = "0.1.0"
enigo = "0.6.1"
directories = "6.0.0"
indicatif = "0.18.4"

[build-dependencies]
tonic-prost-build = "*"
